[tool.poetry]
name = "adventure game api"
version = "0.1.0"
description = "This is an assignment to model a video game environment"
authors = ["NwoluDavid <nwoludave@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
